[project]
name = "coderoxy"
version = "0.1.0"
description = "Compression proxy for Claude Code using LLMLingua-2"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "llmlingua>=0.2.0",
    "torch>=2.0.0",
]

[dependency-groups]
dev = []
